--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "moment": "^2.21.0",
     "mysql": "^2.15.0",
     "node": "^9.8.0"
   }
