--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Alex Bull <abu59@uclive.ac.nz>",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
